# INFO-2602--Project_-IslandLife_Fitness

./: .breakpoints  .gitignore  .oegc7xkaszq02076910511~  pyproject.toml  wsgi.py
App/: main.py
App/controllers/: Routine.py  __init__.py  auth.py  user.py
App/controllers/old/: Routine (copy).py
App/models/: __init__.py  exercise.py  routine.py  user.py
App/models/old/: routine (copy).py  test.py
App/static/: style.css  style2.css
App/templates/: ActualRoutinelist.html  ExerciseList.html  about.html  buy.html  index.html  layout2.html  layout3.html  login.html  pricing.html  routine_form.html  signup.html  style2.css  users.html
App/templates/old/: ActualRoutinelistog.html  indexbad.html  todo.html
App/views/: __init__.py  auth.py  index.py  routine.py  user.py.old
