[tool.poetry]
name = "repl_nix_INFO-2602-Project-IslandLifeFitness"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
Flask-Cors = "^3.0.10"
Flask-JWT-Extended = "^4.4.4"
Flask-Login = "^0.6.2"
Flask-Migrate = "^4.0.4"
Flask-SQLAlchemy = "^3.0.3"
Flask-Uploads = "^0.2.1"
Werkzeug = "^2.2.3"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
